<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="crash_toast_text">Sorry, Customer calls crashed,\n Please check if there is a new version on the play store</string>
    <string name="searching">Searching</string>
    <string name="allCustomerInfo">All customer info in one box</string>
    <string name="detailedCustomerInfo">Enter detailed customer info (preferred)</string>
    <string name="waitingForCall">Waiting for call</string>
    <string name="company">Company</string>

    <string name="flatno">Flat no.</string>
    <string name="building">Building</string>

    <string name="complex">Complex</string>
    <string name="area">Area</string>
    <string name="road">Road</string>
    <string name="wing">Wing</string>
    <string name="landmark">Landmark</string>
    <string name="floor">Floor</string>

    <!-- CustomerCP Info -->
    <string name="customerNameAndAddress">Customer name &amp; address</string>
    <string name="countryCode">Country code</string>
    <string name="phoneNo">Phone no.</string>
    <string name="customerFirstName">First name</string>
    <string name="customerLastName">Last name</string>
    <string name="unknownPerson">Add order amount , Ignore if not a customer</string>
    <string name="ignore">Ignore</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit Customer</string>
    <string name="getting_phone_number">Getting phone number</string>
    <string name="getting_landmark">Getting landmark</string>
    <string name="getting_address">Getting address</string>
    <string name="orderAmount">Order Total Amount</string>
    <string name="no_registration">Regsiter your store. </string>
    <string name="check_internet">No internet Connection</string>
    <string name="no_internet">Please check your internet connection and try again</string>
    <string name="user_access_failed">User Access Failed!</string>
    <string name="customer">Customer</string>
    <string name="calllog">Call Log</string>
    <string name="interneterror">CustomerCall App requires Internect connection to Sync the data</string>
    <!-- end CustomerCP Info -->

    <string name="ok">OK</string>

    <!--order info-->
    <string name="totalorder">Total Order  </string>
    <string name="tamount">Total Amount Rs.</string>

    <string name="orderamount">Order Amount Rs.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--order info-->
    <string-array name="Planets">
        <item>Sun</item>
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>

    <string-array name="Cities">
        <item>Mumbai</item>
        <item>Pune</item>
        <item>Nagpur</item>
        <item>Kolhapur</item>
        <item>Solapur</item>
    </string-array>
</resources>
